# python-project-83

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: Linter.yml
page_analyzer/: app.py
page_analyzer/templates/: index.html
