[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Flask app for page analysis"
classifiers = ["Programming language :: Python :: 3.8"]
authors = ["aleksander_potapkov <potapkov.a.p@gmail.com>"]
repository = "https://github.com/AlexanderPotapkov/python-project-83"
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
flake8 = "^6.0.0"
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
